cmake_minimum_required(VERSION 3.14)
if(POLICY CMP0091)
	cmake_policy(SET CMP0091 NEW) 
endif (POLICY CMP0091)

project(st_demo)



set(CMAKE_CXX_STANDARD  17)
set(CMAKE_C_STANDARD 99)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_LIST_DIR}/bin)

add_subdirectory(src)


